# k_means_essalud_obesidad

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: Diccionario_ExamenesLaboratorio_ConsultaExterna_PatologíasRelacionadas_Obesidad.xlsx  Metadatos_ExamenesLaboratorio_ConsultaExterna_PatologíasRelacionadas_Obesidad_0.docx  dataset_202001_202404_training.csv  dataset_202405_202411_test.csv
src/: __init__.py  clustering.py  data_processing.py  geo_viz_base.py  geo_viz_choropleth.py  geo_viz_clusters.py
